# cognite-sdk-rust

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  renovate.json  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: build-and-test.yml  common.yml  release.yml
cognite/: CONTRIBUTING.md  Cargo.toml  README.md
cognite-codegen/: Cargo.toml
cognite-codegen/proto/: data_point_insertion_request.proto  data_point_list_response.proto  data_points.proto
cognite-codegen/src/: main.rs
cognite-mock/: Cargo.toml
cognite-mock/src/: client.rs  error.rs  lib.rs  patch.rs
cognite-mock/src/resource/: assets.rs  datasets.rs  events.rs  files.rs  labels.rs  mod.rs  raw.rs  relationships.rs  time_series.rs
cognite-mock/src/store/: assets.rs  datapoints.rs  datasets.rs  events.rs  files.rs  labels.rs  mod.rs  raw.rs  relationships.rs  time_series.rs
cognite-mock/tests/: integration_data.rs  integration_meta.rs
cognite/examples/: client.rs
cognite/examples/instances/: main.rs
cognite/src/: api.rs  auth.rs  cognite_client.rs  custom_headers.rs  dto.rs  error.rs  lib.rs  retry.rs  rustls_shim.rs  send_helper.rs  tracing.rs  utils.rs
cognite/src/api/: api_client.rs  authenticator.rs  data_modeling.rs  mod.rs  request.rs  request_builder.rs  resource.rs  utils.rs
cognite/src/api/auth/: login.rs
cognite/src/api/core/: assets.rs  events.rs  files.rs  mod.rs  sequences.rs  time_series.rs
cognite/src/api/core/time_series/: datapoints_stream.rs
cognite/src/api/data_ingestion/: extpipes.rs  raw.rs
cognite/src/api/data_modeling/: containers.rs  data_models.rs  datamodels.rs  instances.rs  mod.rs  records.rs  resource.rs  spaces.rs  streams.rs  views.rs
cognite/src/api/data_modeling/resource/: files.rs  timeseries.rs
cognite/src/api/data_organization/: datasets.rs  labels.rs  mod.rs  relationships.rs
cognite/src/api/iam/: api_keys.rs  groups.rs  mod.rs  security_categories.rs  service_accounts.rs  sessions.rs
cognite/src/api/models/: instances.rs  mod.rs
cognite/src/api/request_builder/: builder.rs  response.rs
cognite/src/dto/: data_modeling.rs  filter.rs  filter_types.rs  identity.rs  items.rs  mod.rs  params.rs  patch_item.rs  utils.rs
cognite/src/dto/core/: asset.rs  common.rs  datapoint.rs  event.rs  mod.rs  sequences.rs  time_series.rs
cognite/src/dto/core/asset/: aggregate.rs  filter.rs  mod.rs
cognite/src/dto/core/datapoint/: filter.rs  mod.rs  status_code.rs
cognite/src/dto/core/datapoint/proto/: data_point_insertion_request.proto
cognite/src/dto/core/event/: aggregate.rs  filter.rs  mod.rs
cognite/src/dto/core/files/: file.rs  filter.rs
cognite/src/dto/core/time_serie/: filter.rs  mod.rs  synthetic.rs
cognite/src/dto/core/time_series/: filter.rs  mod.rs  synthetic.rs
cognite/src/dto/data_ingestion/: extpipes.rs  mod.rs  raw.rs
cognite/src/dto/data_modeling/: common.rs  containers.rs  data_models.rs  datamodels.rs  instances.rs  mod.rs  query.rs  records.rs  spaces.rs  streams.rs  value.rs  views.rs
cognite/src/dto/data_modeling/data_models/: extensions.rs
cognite/src/dto/data_modeling/data_models/extensions/: common.rs  files.rs  timeseries.rs
cognite/src/dto/data_modeling/instances/: extensions.rs
cognite/src/dto/data_modeling/instances/extensions/: common.rs  extractors.rs  files.rs  timeseries.rs  units.rs
cognite/src/dto/data_modeling/records/: aggregates.rs
cognite/src/dto/data_organization/: datasets.rs  labels.rs  relationships.rs
cognite/src/dto/filter/: aggregate.rs  mod.rs  query_value.rs
cognite/src/dto/iam/: api_key.rs  group.rs  mod.rs  security_category.rs  service_account.rs  session.rs
cognite/src/dto/models/: instances.rs
cognite/src/utils/: lease.rs
cognite/tests/: asset_tests.rs  common.rs  common_tests.rs  containers_tests.rs  data_model_tests.rs  data_modeling_tests.rs  data_models_tests.rs  datamodels_tests.rs  datapoints_tests.rs  dm_tests.rs  dummyfile.txt  event_tests.rs  file_tests.rs  fixtures.rs  instances_tests.rs  raw_tests.rs  records_tests.rs  spaces_test.rs  time_serie_tests.rs  time_series_tests.rs  views_tests.rs
cognite/tests/common/: mod.rs
cognite/tests/data_modeling_tests/: instances_tests.rs
cognite/tests/fixtures/: mod.rs
examples/: client.rs
src/: api_client.rs  api_keys.rs  assets.rs  cognite_client.rs  datapoints.rs  error.rs  events.rs  files.rs  lib.rs  login.rs  params.rs  retry.rs  security_categories.rs  time_series.rs  users.rs
src/api/: api_client.rs  api_keys.rs  assets.rs  authenticator.rs  datapoints.rs  events.rs  files.rs  login.rs  mod.rs  params.rs  resource.rs  security_categories.rs  time_series.rs  users.rs  utils.rs
src/api/auth/: login.rs
src/api/core/: assets.rs  datapoints.rs  events.rs  files.rs  mod.rs  sequences.rs  time_series.rs
src/api/data_ingestion/: extpipes.rs  mod.rs
src/api/data_organization/: mod.rs
src/api/iam/: api_keys.rs  groups.rs  mod.rs  security_categories.rs  service_accounts.rs  users.rs
src/dto/: asset.rs  filter_types.rs  identity.rs  items.rs  mod.rs  params.rs  patch_item.rs  search_filter.rs  security_category.rs  time_serie.rs
src/dto/auth/: login.rs
src/dto/core/: mod.rs  sequences.rs
src/dto/core/asset/: asset.rs  filter.rs  mod.rs
src/dto/core/datapoint/: datapoint.rs  filter.rs  mod.rs
src/dto/core/event/: event.rs  filter.rs  mod.rs
src/dto/core/files/: file.rs  filter.rs  mod.rs
src/dto/core/time_serie/: filter.rs  mod.rs  time_serie.rs
src/dto/data_ingestion/: extpipes.rs  raw.rs
src/dto/data_organization/: datasets.rs  labels.rs  relationships.rs
src/dto/iam/: api_key.rs  group.rs  mod.rs  security_category.rs  service_account.rs
tests/: api_keys_tests.rs  asset_tests.rs  assets.rs  datapoints_tests.rs  event_tests.rs  file_tests.rs  files_tests.rs  security_categories_tests.rs  service_account_tests.rs  time_serie_tests.rs  user_tests.rs
tests/common/: mod.rs
