[package]
name = "cognite"
version = "0.1.0"
authors = ["Haakon Garseg Mørk <haakon.mork@cognite.com>"]
publish = false
edition = "2018"

[dependencies]
reqwest = { version = "0.10.0", features = ["json"] }
serde = { version = "1.0.99", features = ["derive"] }
serde_json = "1.0.40"
uuid = { version = "0.8", features = ["serde", "v4"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
