[package]
name = "cognite"
version = "0.1.0"
authors = ["Haakon Garseg Mørk <haakon.mork@cognite.com>"]
publish = false
edition = "2018"

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.59"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
prost = { version = "0.9.0" }
futures-locks = { version = "0.7.0" }
async-trait = { version = "0.1.53" }
futures = "0.3.24"
thiserror = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
once_cell = { version = "1.15.0" }
rand = "0.8.5"

[build-dependencies]
prost-build = "0.9.0"
