[package]
name = "cognite-mock"
version = "0.1.0"
edition = "2021"
description = "In-memory mock CogniteClient for testing"

[dependencies]
cognite-sdk = { path = "../cognite" }
tokio = { version = "^1", features = ["sync"] }
thiserror = "^2"
serde_json = "^1"

[dev-dependencies]
tokio = { version = "^1", features = ["rt", "macros"] }
