[package]
authors = [
  "Einar Marstrander Omang <einar.omang@cognite.com>",
  "Haakon Garseg Mørk <haakon.mork@cognite.com>",
  "Niek Beckers <niek.beckers@cognite.com>",
]
edition = "2021"
name = "cognite"
publish = false
version = "0.4.2"

[features]
default = []
integration_tests = []

[dependencies]
async-trait = "^0.1"
bytes = "^1"
derivative = "^2"
futures = "^0.3"
futures-locks = "^0.7"
futures-timer = "^3"
prost = "^0.13"
prost-types = "^0.13"

http = {"version" = "^1" }
reqwest = { version = "^0.12", features = [
  "gzip",
  "json",
  "multipart",
  "rustls-tls-native-roots",
  "stream",
], default-features = false } # Default brings in openssl
reqwest-middleware = { version = "^0.4" }

anyhow = "^1"
rand = "^0.8.5"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_with = "^3"
task-local-extensions = { version = "^0.1", optional = true }
thiserror = "^2"
tokio = { version = "^1", default-features = false, features = ["fs"] }
tokio-util = { version = "^0.7", default-features = false, features = [
  "codec",
  "io",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10" }
wiremock = "0.6.0"

[dev-dependencies]
uuid = { version = "1.10.0", features = ["v4"] }
wiremock = "0.6.0"
